spacing issue fixed

--- a/test-website/css/main.css
+++ b/test-website/css/main.css
@@ -2029,7 +2029,6 @@ p.p-big{
 ----------------------------------------------------*/ 
 .brands-area img{
   padding: 10%;
-  margin-left: 50px;
 }
 /*----------------------------------------------------
 					End brands-area
